@@ -102,10 +102,8 @@ namespace Dimension
    constexpr bool is_length_v = is_length<T>::value;
 
    // Concept for C++20 and newer
-   #ifdef __cpp_concepts
    template<typename T>
    concept length_type = is_length_v<T>;
-   #endif
 }
 
 #endif //STATIC_DIMENSION_LENGTH_H
