@@ -17,75 +17,75 @@ using Dimension::pi;
 
 TEST_F(TrigTest, CosTest) {
 
-   ASSERT_NEAR(cos(Angle<Radian>(pi * 2.0)), 1.0, TOLERANCE);
-   ASSERT_NEAR(cos(Angle<Radian>(pi * 1.0)), -1.0, TOLERANCE);
-   ASSERT_NEAR(cos(Angle<Radian>(pi / 2.0)), 0.0, TOLERANCE);
-   ASSERT_NEAR(cos(Angle<Radian>((3.0 * pi) / 2.0)), 0.0, TOLERANCE);
+   ASSERT_NEAR(cos(Angle<Radians>(pi * 2.0)), 1.0, TOLERANCE);
+   ASSERT_NEAR(cos(Angle<Radians>(pi * 1.0)), -1.0, TOLERANCE);
+   ASSERT_NEAR(cos(Angle<Radians>(pi / 2.0)), 0.0, TOLERANCE);
+   ASSERT_NEAR(cos(Angle<Radians>((3.0 * pi) / 2.0)), 0.0, TOLERANCE);
 
-   ASSERT_NEAR(cos(Angle<Radian>( pi / 6.0)), (std::sqrt(3.0) / 2.0), TOLERANCE);
+   ASSERT_NEAR(cos(Angle<Radians>( pi / 6.0)), (std::sqrt(3.0) / 2.0), TOLERANCE);
 }
 
 TEST_F(TrigTest, SinTest) {
 
-   ASSERT_NEAR(sin(Angle<Radian>(pi * 2.0)), 0.0, TOLERANCE);
-   ASSERT_NEAR(sin(Angle<Radian>(pi * 1.0)), 0.0, TOLERANCE);
-   ASSERT_NEAR(sin(Angle<Radian>(pi / 2.0)), 1.0, TOLERANCE);
-   ASSERT_NEAR(sin(Angle<Radian>((3.0 * pi) / 2.0)), -1.0, TOLERANCE);
+   ASSERT_NEAR(sin(Angle<Radians>(pi * 2.0)), 0.0, TOLERANCE);
+   ASSERT_NEAR(sin(Angle<Radians>(pi * 1.0)), 0.0, TOLERANCE);
+   ASSERT_NEAR(sin(Angle<Radians>(pi / 2.0)), 1.0, TOLERANCE);
+   ASSERT_NEAR(sin(Angle<Radians>((3.0 * pi) / 2.0)), -1.0, TOLERANCE);
 
-   ASSERT_NEAR(sin(Angle<Radian>( pi / 6.0)), 0.5, TOLERANCE);
+   ASSERT_NEAR(sin(Angle<Radians>( pi / 6.0)), 0.5, TOLERANCE);
 }
 
 TEST_F(TrigTest, TanTest) {
 
-   ASSERT_NEAR(tan(Angle<Radian>(pi * 0.0)), 0.0, TOLERANCE);
-   ASSERT_NEAR(tan(Angle<Radian>(pi / 4.0)), 1.0, TOLERANCE);
-   ASSERT_NEAR(tan(Angle<Radian>(3.0 * pi / 4.0)), -1.0, TOLERANCE);
+   ASSERT_NEAR(tan(Angle<Radians>(pi * 0.0)), 0.0, TOLERANCE);
+   ASSERT_NEAR(tan(Angle<Radians>(pi / 4.0)), 1.0, TOLERANCE);
+   ASSERT_NEAR(tan(Angle<Radians>(3.0 * pi / 4.0)), -1.0, TOLERANCE);
 
-   ASSERT_NEAR(tan(Angle<Radian>(pi / 6.0)), std::sqrt(3.0) / 3.0, TOLERANCE);
-   ASSERT_NEAR(tan(Angle<Radian>(pi / 3.0)), std::sqrt(3.0), TOLERANCE);
+   ASSERT_NEAR(tan(Angle<Radians>(pi / 6.0)), std::sqrt(3.0) / 3.0, TOLERANCE);
+   ASSERT_NEAR(tan(Angle<Radians>(pi / 3.0)), std::sqrt(3.0), TOLERANCE);
 }
 
 TEST_F(TrigTest, AcosTest) {
    
-   ASSERT_NEAR(Dimension::acos(1.0).GetAngle<Radian>(), 0.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::acos(0.0).GetAngle<Radian>(), pi / 2.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::acos(-1.0).GetAngle<Radian>(), pi, TOLERANCE);
+   ASSERT_NEAR(Dimension::acos(1.0).GetAngle<Radians>(), 0.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::acos(0.0).GetAngle<Radians>(), pi / 2.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::acos(-1.0).GetAngle<Radians>(), pi, TOLERANCE);
 
-   ASSERT_NEAR(Dimension::acos(std::sqrt(3.0) / 2.0).GetAngle<Radian>(), pi / 6.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::acos(0.5).GetAngle<Radian>(), pi / 3.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::acos(std::sqrt(3.0) / 2.0).GetAngle<Radians>(), pi / 6.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::acos(0.5).GetAngle<Radians>(), pi / 3.0, TOLERANCE);
 }
 
 TEST_F(TrigTest, AsinTest) {
 
-   ASSERT_NEAR(Dimension::asin(0.0).GetAngle<Radian>(), 0.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::asin(1.0).GetAngle<Radian>(), pi / 2.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::asin(-1.0).GetAngle<Radian>(), -pi / 2.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::asin(0.0).GetAngle<Radians>(), 0.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::asin(1.0).GetAngle<Radians>(), pi / 2.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::asin(-1.0).GetAngle<Radians>(), -pi / 2.0, TOLERANCE);
 
-   ASSERT_NEAR(Dimension::asin(0.5).GetAngle<Radian>(), pi / 6.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::asin(std::sqrt(3.0) / 2.0).GetAngle<Radian>(), pi / 3.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::asin(0.5).GetAngle<Radians>(), pi / 6.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::asin(std::sqrt(3.0) / 2.0).GetAngle<Radians>(), pi / 3.0, TOLERANCE);
 }
 
 TEST_F(TrigTest, AtanTest) {
 
-   ASSERT_NEAR(Dimension::atan(0.0).GetAngle<Radian>(), 0.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan(1.0).GetAngle<Radian>(), pi / 4.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan(-1.0).GetAngle<Radian>(), -pi / 4.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan(0.0).GetAngle<Radians>(), 0.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan(1.0).GetAngle<Radians>(), pi / 4.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan(-1.0).GetAngle<Radians>(), -pi / 4.0, TOLERANCE);
 
-   ASSERT_NEAR(Dimension::atan(std::sqrt(3.0)).GetAngle<Radian>(), pi / 3.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan(1.0 / std::sqrt(3.0)).GetAngle<Radian>(), pi / 6.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan(std::sqrt(3.0)).GetAngle<Radians>(), pi / 3.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan(1.0 / std::sqrt(3.0)).GetAngle<Radians>(), pi / 6.0, TOLERANCE);
 }
 
 TEST_F(TrigTest, Atan2Test) {
 
-   ASSERT_NEAR(Dimension::atan2(Length<Meters>(0.0), Length<Meters>(1.0)).GetAngle<Radian>(), 0.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan2(Length<Meters>(1.0), Length<Meters>(0.0)).GetAngle<Radian>(), pi / 2.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan2(Length<Meters>(-1.0), Length<Meters>(0.0)).GetAngle<Radian>(), -pi / 2.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan2(Length<Meters>(0.0), Length<Meters>(-1.0)).GetAngle<Radian>(), pi, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan2(Length<Meters>(1.0), Length<Meters>(1.0)).GetAngle<Radian>(), pi / 4.0, TOLERANCE);
-   ASSERT_NEAR(Dimension::atan2(Length<Meters>(-1.0), Length<Meters>(-1.0)).GetAngle<Radian>(), -3.0 * pi / 4.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan2(Length<Meters>(0.0), Length<Meters>(1.0)).GetAngle<Radians>(), 0.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan2(Length<Meters>(1.0), Length<Meters>(0.0)).GetAngle<Radians>(), pi / 2.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan2(Length<Meters>(-1.0), Length<Meters>(0.0)).GetAngle<Radians>(), -pi / 2.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan2(Length<Meters>(0.0), Length<Meters>(-1.0)).GetAngle<Radians>(), pi, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan2(Length<Meters>(1.0), Length<Meters>(1.0)).GetAngle<Radians>(), pi / 4.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan2(Length<Meters>(-1.0), Length<Meters>(-1.0)).GetAngle<Radians>(), -3.0 * pi / 4.0, TOLERANCE);
 
    // Ensure resolution of BaseDimension to named dimensions work
-   ASSERT_NEAR(Dimension::atan2(Length<Meters>(0.0), BaseDimension<std::tuple<Meters>, std::tuple<>>(1.0)).GetAngle<Radian>(), 0.0, TOLERANCE);
+   ASSERT_NEAR(Dimension::atan2(Length<Meters>(0.0), BaseDimension<std::tuple<Meters>, std::tuple<>>(1.0)).GetAngle<Radians>(), 0.0, TOLERANCE);
 }
 
 TEST_F(TrigTest, HypotTest) {
